tests/fixtures/LatestTests/VariableDeclarationTests/errors/reassignment_to_const_deci32.fg
/; EXPECT_ERROR: InvalidAssignmentToConstantVariable
const x:deci32 = 1.5f
x <- 2.5f

